test/extern/ferguson/param-cname-bad-not-param2.good
param-cname-bad-not-param2.chpl:3: error: extern name expression must be param
