test/extern/ferguson/param-cname-bad-not-param2.chpl
var mystring = "test";

export (mystring) proc foo() {
  writeln("in foo");
}

foo();
